--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -3,3 +3,51 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  background: #cac9c9;
+  padding: 4rem 1rem;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  font-family: 'Lucida Sans',  sans-serif;
+}
+#app {
+  padding: 1rem;
+  min-height: 300px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  place-items: center;
+}
+h1 {
+  font-size: 2rem;
+  margin: 0.5rem 0;
+  text-align: center;
+}
+p {
+  margin: 0.5rem 0;
+}
+form {
+  width: 100%;
+  display: flex;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
+input {
+  padding: 0.5rem;
+  height: 40px;
+  width: 80%;
+  border: none;
+  outline: none;
+  border-radius: 0.5rem 0 0 0.5rem;
+}
+button {
+  padding: 0.5rem;
+  height: 40px;
+  width: 20%;
+  border: none;
+  outline: none;
+  border-radius: 0 0.5rem 0.5rem 0;
+  cursor: pointer;
+}
