--- a/templates/city-not-found.html
+++ b/templates/city-not-found.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{url_for('static', filename='styles/styles.css')}}">
-  <title>Get Weather Conditions</title>
+  <title>City Not Found</title>
 </head>
 
 <body>
   <div id="app">
-    <h1>Get Weather Conditions</h1>
+    <h1>City Not Found</h1>
+    <h2>Try again ?</h2>
+
     <form action="/weather">
       <input type="text" name="city" id="city" placeholder="Enter a City" />
       <button type="submit">Submit</button>
