--- a/templates/weather.html
+++ b/templates/weather.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{url_for('static', filename='styles/styles.css')}}">
-  <title>Get Weather Conditions</title>
+  <title>{{ title }} Weather</title>
 </head>
 
 <body>
   <div id="app">
-    <h1>Get Weather Conditions</h1>
+    <h1>{{ title }} Weather</h1>
+    <p>{{ status }} and {{ temp }} &deg;</p>
+    <p>Feels like {{ feels_like }} &deg;</p>
+
     <form action="/weather">
       <input type="text" name="city" id="city" placeholder="Enter a City" />
       <button type="submit">Submit</button>
